@@ -124,17 +124,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
         http://people.apache.org/~wrowe/r569535-backport-2.0-r2.patch
       +1: wrowe, rpluem, jim
 
-    * mod_ssl: Version reporting update; displays 'compiled against'
-      Apache and build-time SSL Library versions at loglevel [info],
-      while reporting the run-time SSL Library version in the server
-      info tags.  Helps to identify a mod_ssl built against one flavor
-      of OpenSSL but running against another (also adds SSL-C version
-      number reporting.)  [William Rowe]
-        http://svn.apache.org/viewvc?view=rev&revision=520701
-      Backported to 2.0 (applies with a bit of fuzz);
-        http://people.apache.org/~wrowe/r520701-backport-2.2.patch
-      +1: wrowe, rpluem, jim
-
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ please place SVN revisions from trunk here, so it is easy to
     identify exactly what the proposed changes are!  Add all new
